syntax = "proto3";

package FulfillmentService;

option go_package = "fulfillmentService/proto";

message Order{
    int64 id = 1;
    string location = 2;
    string orderStatus = 3;
}

message AssignedOrderRequest{
    Order order = 1;
}

message AssignedOrderResponse{
    DeliveryPerson deliveryPerson = 1;
    string orderStatus = 2;
}

message DeliveryPerson{
    int64 id = 1;
    string name = 2;
    string location = 3;
}

message CreateRequest{
    DeliveryPerson deliveryPerson = 1;
}

message CreateResponse{
    DeliveryPerson deliveryPerson = 1;
    string message = 2;
}

service fulfillment{
    rpc CreateDeliveryPerson(CreateRequest) returns (CreateResponse);
    rpc AssignedOrder(AssignedOrderRequest) returns (AssignedOrderResponse);
}

// protoc -Iproto --go_out=.  --go_opt=module=fulfillmentService --go-grpc_out=. --go-grpc_opt=module=fulfillmentService proto/fulfillment.proto
